# BitDrop

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  deploy.sh  pyproject.toml
docs/: API.md  BRANDING.md
frontend/: index.html  package-lock.json  package.json
frontend/public/: wordlist-10k-clean.json
frontend/src/: App.jsx  main.jsx  utils.js
frontend/src/api/: axiosClient.js  download.js  upload.js
frontend/src/branding/: theme.js
frontend/src/components/: ErrorFallback.jsx  NavBar.jsx  PasswordField.jsx  sharedStyles.js
frontend/src/pages/: Download.jsx
frontend/src/pages/Upload/: Upload.jsx  Uploader.jsx
frontend/src/utils/: decryption.js  encryption.js  utils.js
server/app/: main.py  utils.py
server/tests/: test_full_cycle.py
