[project]
name = "BitDrop"
version = "2.0.0"
description = "Secure and anonymous file sharing"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "boto3>=1.40.65",
    "email-validator>=2.3.0",
    "fastapi[standard]",
    "gunicorn",
    "ipython",
    "pycryptodome>=3.23.0",
    "pydantic",
    "python-dotenv>=1.1.1",
    "pyyaml",
    "requests",
    "uvicorn",
]
[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pycryptodome-test-vectors>=1.0.22",
    "pytest >=8.3.3",
    "pytest-dependency>=0.6.0",
    "pytest-xdist>=3.8.0",
    "ruff",
]
[tool.ruff]
# Allow lines to 88 chars (Black compatible).
line-length = 88
